--- a/WebContent/admin/dashboard.html
+++ b/WebContent/admin/dashboard.html
@@ -56,7 +56,7 @@
     </div>
 
     <div data-options="region:'center'">
-        <iframe name="dashframe" id="dashframe" frameborder="0" scrolling="no"></iframe>
+        <iframe name="dashframe" id="dashframe" frameborder="0" scrolling="true"></iframe>
     </div>
 
     <div data-options="region:'south',split:true" id="south_layout">
@@ -71,6 +71,7 @@
 <script src="../assets/admin/js/jquery.min.js"></script>
 <script src="../assets/admin/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="../assets/admin/js/jquery.easyui.min.js"></script>
+<script type="text/javascript" src="../assets/admin/js/dashboard.js"></script>
 
 </body>
 </html>
