--- a/WebContent/admin/show.html
+++ b/WebContent/admin/show.html
@@ -1,70 +1,103 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>News</title>
+    <title>Show</title>
     <link rel="stylesheet" type="text/css" href="../assets/admin/themes/default/easyui.css">
     <link rel="stylesheet" type="text/css" href="../assets/admin/themes/icon.css">
     <link rel="stylesheet" href="../assets/admin/css/show.css"/>
 </head>
 <body>
-<div class="easyui-tabs" data-options="border:false">
+<div id="tabsMenu" class="easyui-tabs" data-options="border:false">
 
     <div title="待审核">
-        <table id="wait_check" class="easyui-datagrid" style="width: 100%;height: 100%"
+
+        <table id="check" class="easyui-datagrid" style="width: 100%; height: 100% ; max-height: 800px"
                url="data.json"
-               toolbar="#toolbar" pagination="true"
+               toolbar="#check-toolbar" pagination="true"
                rownumbers="true" fitColumns="true" singleSelect="false">
             <thead>
             <tr>
                 <th data-options="field:'ck',checkbox:true"></th>
-                <th field="firstname" width="50">First Name</th>
-                <th field="lastname" width="50">Last Name</th>
-                <th field="phone" width="50">Phone</th>
-                <th field="email" width="50">Email</th>
+                <th field="id" width="2">ID</th>
+                <th field="title" width="2">标题</th>
+                <th field="category" width="2">类别</th>
+                <th field="publishTime" width="3">发布时间</th>
+                <th field="content" width="5">内容</th>
+                <th field="reader" width="2">阅读数</th>
+                <th field="starCounter" width="2">点赞数</th>
+                <th field="user" width="3">发布者</th>
+                <th field="tag" width="3">标签</th>
+                <th field="coverImage" width="2">封面图片</th>
             </tr>
             </thead>
         </table>
-        <div id="toolbar">
-            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="check()">普通审核</a>
-            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-ok" plain="true" onclick="check()">批量审核</a>
+
+        <div id="check-toolbar">
+            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="normalCheck()">普通审核</a>
+            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-ok" plain="true" onclick="multipleCheck()">批量审核</a>
         </div>
 
-        <div id="dlg" class="easyui-dialog" style="width:400px;height:280px;padding:10px 20px"
-             closed="true" buttons="#dlg-buttons">
-            <div class="ftitle">User Information</div>
+        <div id="check-dlg" class="easyui-dialog" style="padding:10px 20px"
+             closed="true" buttons="#check-dlg-buttons" modal="true">
+            <div class="ftitle">文章信息</div>
             <form id="fm" method="post" novalidate>
                 <div class="fitem">
-                    <label>First Name:</label>
-                    <input name="firstname" class="easyui-textbox" required="true">
+                    <label>ID：</label>
+                    <input name="id" class="easyui-textbox" editable="false">
                 </div>
                 <div class="fitem">
-                    <label>Last Name:</label>
-                    <input name="lastname" class="easyui-textbox" required="true">
+                    <label>标题：</label>
+                    <input name="title" class="easyui-textbox" editable="false">
                 </div>
                 <div class="fitem">
-                    <label>Phone:</label>
-                    <input name="phone" class="easyui-textbox" required="true">
+                    <label>类别：</label>
+                    <input name="category" class="easyui-textbox" editable="false">
                 </div>
                 <div class="fitem">
-                    <label>Email:</label>
-                    <input name="email" class="easyui-textbox" required="true" validType="email">
+                    <label>发布时间：</label>
+                    <input name="pubilshTime" class="easyui-textbox" editable="false">
+                </div>
+                <div class="fitem">
+                    <label>内容：</label>
+                    <input name="content" class="easyui-textbox" data-options="multiline:true" style="height:60px" editable="false">
+                </div>
+                <div class="fitem">
+                    <label>阅读数：</label>
+                    <input name="reader" class="easyui-textbox" editable="false">
+                </div>
+                <div class="fitem">
+                    <label>点赞数：</label>
+                    <input name="starCounter" class="easyui-textbox" editable="false">
+                </div>
+                <div class="fitem">
+                    <label>发布者：</label>
+                    <input name="user" class="easyui-textbox" editable="false">
+                </div>
+                <div class="fitem">
+                    <label>标签：</label>
+                    <input name="tag" class="easyui-textbox" editable="false">
+                </div>
+                <div class="fitem">
+                    <label>封面图片：</label>
+                    <input name="coverImage" class="easyui-textbox" editable="false">
                 </div>
             </form>
         </div>
-        <div id="dlg-buttons">
+
+        <div id="check-dlg-buttons">
             <a href="javascript:void(0)" class="easyui-linkbutton c6" iconCls="icon-ok" onclick="saveUser()" style="width:90px">审核通过</a>
-            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-cancel" onclick="javascript:$('#dlg').dialog('close')" style="width:90px">审核不通过</a>
+            <a href="javascript:void(0)" class="easyui-linkbutton" iconCls="icon-cancel" onclick="javascript:$('#check-dlg').dialog('close')" style="width:90px">审核不通过</a>
         </div>
 
     </div>
 
     <div title="待推送">
-
+        <table id="push"></table>
     </div>
 
     <div title="已推送">
-
+        <table id="pushed"></table>
     </div>
 </div>
 </body>
